[tool.poetry]
name = "wazam"
version = "0.1.0"
description = "An Unoffical Shazam WebUI"
authors = ["Roshan-R"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
requests = "^2.26.0"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
